# bsdutils

./: .gitignore  .mailmap  AUTHORS  AUTHORS.md  DIFFERENCES  GNUmakefile  LICENSE  Makefile  Makefile.am  README  README.md  TODO  TRADEOFFS  autogen.sh  bsdutils.spec.in  config.mk  configure.ac  gen-patches.sh  import-src.sh  meson.build  meson_options.txt  upstream.conf
compat/: Makefile  Makefile.am  compat.h  devname.c  expand_number.c  fmt_scaled.c  getbsize.c  heapsort.c  humanize_number.c  logwtmp.c  merge.c  meson.build  ohash.c  pwcache.c  reallocarray.c  recallocarray.c  setmode.c  signames.c  strlcat.c  strlcpy.c  strlfuncs.c  strmode.c  strtonum.c  tree.h  util.h  vis.c
src/: Makefile  Makefile.am  meson.build
src/arch/: Makefile.am  arch.c
src/basename/: Makefile  Makefile.am  basename.1b  basename.c  meson.build
src/bc/: bc.1b  bc.y  meson.build  scan.l
src/cat/: Makefile  Makefile.am  cat.1b  cat.c  meson.build
src/chmod/: Makefile  Makefile.am  chmod.1  chmod.1b  chmod.c  meson.build
src/chown/: Makefile  chgrp.1  chgrp.1b  chown.8  chown.8b  chown.c  meson.build
src/chroot/: .#chroot.  Makefile  Makefile.am  chroot.8  chroot.8b  chroot.c  meson.build
src/cksum/: cksum.1b  meson.build
src/comm/: Makefile  Makefile.am  comm.1b  comm.c  meson.build
src/cp/: Makefile.am  cp.1  cp.1b  cp.c  extern.h  meson.build  utils.c
src/csplit/: Makefile  Makefile.am  csplit.1b  csplit.c  meson.build
src/cut/: Makefile  Makefile.am  cut.1b  cut.c  meson.build
src/date/: Makefile.am  date.1b  date.c  meson.build
src/dc/: bcode.c  dc.1b  dc.c  inout.c  meson.build
src/dd/: Makefile  Makefile.am  args.c  conv.c  conv_tab.c  dd.1  dd.1b  dd.c  dd.h  extern.h  meson.build  misc.c  position.c
src/df/: Makefile.am  df.1b  df.c  ext2fs_df.c  ffs_df.c  meson.build  vfslist.c
src/df-nolibxo/: df.1  meson.build
src/diff/: diffreg.c  meson.build
src/dirname/: Makefile  Makefile.am  dirname.c  meson.build
src/du/: Makefile.am  du.1  du.1b  du.c  meson.build
src/echo/: Makefile  Makefile.am  echo.1b  echo.c  meson.build
src/env/: Makefile  Makefile.am  env.1  env.1b  env.c  envopts.c  meson.build
src/expand/: Makefile  Makefile.am  expand.1b  expand.c  meson.build
src/expr/: Makefile.am  expr.1b  expr.c  expr.y  meson.build
src/factor/: Makefile  Makefile.am  factor.6b  factor.c  meson.build  pr_tbl.c
src/false/: Makefile  Makefile.am  false.1b  false.c  meson.build
src/find/: find.1b  find.c  function.c  getdate.y  ls.c  main.c  meson.build  misc.c
src/fmt/: Makefile  Makefile.am  fmt  fmt.1b  fmt.c  meson.build
src/fold/: Makefile  Makefile.am  fold.1b  fold.c  meson.build
src/head/: Makefile  Makefile.am  head.1b  head.c  meson.build
src/hexdump/: conv.c  display.c  hexdump.1b  hexdump.c  meson.build  od.1b  odsyntax.c  parse.c
src/hostname/: hostname.1b  meson.build
src/id/: Makefile  Makefile.am  groups.1b  id.1  id.1b  id.c  meson.build  whoami.1b
src/install/: Makefile.am
src/join/: Makefile  Makefile.am  join.1b  join.c  meson.build
src/kill/: kill.1b  kill.c  meson.build
src/ln/: Makefile.am  ln.1b  ln.c  meson.build  symlink.7b
src/logname/: Makefile  Makefile.am  logname.1b  logname.c  meson.build
src/ls/: Makefile  Makefile.am  cmp.c  extern.h  ls.1  ls.1b  ls.c  ls.h  meson.build  print.c  utf8.c  util.c
src/mkdir/: Makefile  Makefile.am  meson.build  mkdir.1b  mkdir.c
src/mkfifo/: meson.build  mkfifo.1b  mkfifo.c
src/mknod/: Makefile  Makefile.am  meson.build  mknod.8b  mknod.c
src/mktemp/: Makefile  Makefile.am  meson.build  mktemp.1b  mktemp.c
src/mv/: Makefile.am  cp.c  meson.build  mv.1b  mv.c  rm.c
src/nice/: Makefile  Makefile.am  meson.build  nice.1b  nice.c
src/nl/: Makefile  Makefile.am  meson.build  nl.1b  nl.c
src/nohup/: Makefile  Makefile.am  meson.build  nohup.1b  nohup.c
src/paste/: Makefile  Makefile.am  meson.build  paste.1b  paste.c
src/pathchk/: meson.build  pathchk.1b
src/pr/: Makefile  Makefile.am  egetopt.c  meson.build  pr.1b  pr.c
src/printenv/: Makefile  Makefile.am  meson.build  printenv.1b  printenv.c
src/printf/: Makefile  Makefile.am  meson.build  printf.1b  printf.c
src/pwd/: Makefile  Makefile.am  meson.build  pwd.1b  pwd.c
src/readlink/: Makefile.am  readlink.c
src/realpath/: meson.build  realpath.1b
src/rm/: Makefile.am  meson.build  rm.1  rm.1b  rm.c
src/rmdir/: Makefile  Makefile.am  meson.build  rmdir.1b  rmdir.c
src/sed/: compile.c  main.c  meson.build  sed.1b
src/seq/: meson.build  seq.1b  seq.c
src/sleep/: Makefile  Makefile.am  meson.build  sleep.1  sleep.1b  sleep.c
src/sort/: Makefile.am  bwstring.c  bwstring.h  coll.c  file.c  mem.c  meson.build  radixsort.c  sort.1b  sort.c  sort.h  vsort.c
src/split/: Makefile.am  meson.build  split.1b  split.c
src/stat/: Makefile.am  meson.build  stat.1  stat.1b  stat.c
src/stdbuf/: meson.build  stdbuf.1b
src/stty/: Makefile.am  cchar.c  extern.h  gfmt.c  key.c  meson.build  modes.c  print.c  stty.1  stty.1b  stty.c  stty.h  util.c
src/sync/: Makefile  Makefile.am  meson.build  sync.8b  sync.c
src/tail/: Makefile  Makefile.am  extern.h  forward.c  meson.build  misc.c  read.c  reverse.c  tail.1b  tail.c
src/tee/: Makefile  Makefile.am  meson.build  tee.1b  tee.c
src/test/: Makefile  Makefile.am  install.sh  meson.build  test.1b  test.c
src/timeout/: meson.build  timeout.1b  timeout.c
src/touch/: Makefile  Makefile.am  meson.build  touch.1b  touch.c
src/tr/: Makefile.am  cmap.h  extern.h  meson.build  str.c  tr.1b  tr.c
src/true/: Makefile  Makefile.am  meson.build  true.1b  true.c
src/truncate/: meson.build  truncate.1b  truncate.c
src/tsort/: Makefile.am  meson.build  tsort.1b  tsort.c
src/tty/: Makefile.am  meson.build  tty.1b  tty.c
src/uname/: Makefile.am  meson.build  uname.1b  uname.c
src/unexpand/: Makefile  Makefile.am  meson.build  unexpand.c
src/uniq/: Makefile  Makefile.am  meson.build  uniq.1b  uniq.c
src/users/: Makefile  Makefile.am  meson.build  users.1b  users.c  users.cc
src/wc/: Makefile.am  (+4 more)
src/wc-nolibxo/: meson.build  wc.1
(+193 files in other folders)
