subdir('arch')
subdir('basename')
subdir('cat')
subdir('chmod')
subdir('chroot')
subdir('comm')
subdir('cp')
subdir('csplit')
subdir('cut')
subdir('date')
subdir('dd')
subdir('df')
subdir('dirname')
subdir('du')
subdir('echo')
subdir('env')
subdir('expand')
subdir('expr')
subdir('factor')
subdir('false')
subdir('fmt')
subdir('fold')
subdir('head')
subdir('id')
subdir('join')
subdir('ln')
subdir('logname')
subdir('ls')
subdir('mkdir')
subdir('mknod')
subdir('mktemp')
subdir('mv')
subdir('nice')
subdir('nl')
subdir('nohup')
subdir('paste')
subdir('pr')
subdir('printenv')
subdir('printf')
subdir('pwd')
subdir('readlink')
subdir('rm')
subdir('rmdir')
subdir('sleep')
subdir('sort')
subdir('split')
subdir('stat')
subdir('stty')
subdir('sync')
subdir('tail')
subdir('tee')
subdir('test')
subdir('touch')
subdir('tr')
subdir('true')
subdir('tsort')
subdir('tty')
subdir('uname')
subdir('unexpand')
subdir('uniq')
subdir('users')
subdir('wc')
subdir('who')
subdir('xargs')
subdir('xinstall')
subdir('yes')
