subdir('basename')
subdir('cat')
subdir('chmod')
subdir('chown')
subdir('chroot')
subdir('comm')
subdir('csplit')
subdir('cut')
subdir('dd')
subdir('dirname')
subdir('echo')
subdir('env')
subdir('expand')
subdir('factor')
subdir('false')
subdir('fmt')
subdir('fold')
subdir('head')
subdir('id')
subdir('join')
subdir('logname')
subdir('ls')
subdir('mkdir')
subdir('mknod')
subdir('mktemp')
subdir('nice')
subdir('nl')
subdir('nohup')
subdir('paste')
subdir('pr')
subdir('printenv')
subdir('printf')
subdir('pwd')
subdir('rmdir')
subdir('sleep')
subdir('sync')
subdir('tee')
subdir('test')
subdir('touch')
subdir('true')
subdir('unexpand')
subdir('uniq')
subdir('users')
subdir('yes')
