subdir('basename')
subdir('bc')
subdir('cat')
subdir('chmod')
subdir('chown')
subdir('chroot')
subdir('cksum')
subdir('comm')
subdir('cp')
subdir('csplit')
subdir('cut')
subdir('date')
subdir('dc')
subdir('dd')
subdir('df')
subdir('dirname')
#subdir('du')
subdir('echo')
subdir('env')
subdir('expand')
subdir('expr')
subdir('factor')
subdir('false')
subdir('find')
subdir('fmt')
subdir('fold')
subdir('head')
subdir('hostname')
subdir('id')
subdir('join')
subdir('ln')
subdir('logname')
subdir('ls')
subdir('mkdir')
subdir('mkfifo')
subdir('mknod')
subdir('mktemp')
subdir('mv')
subdir('nice')
subdir('nl')
subdir('nohup')
subdir('paste')
subdir('pr')
subdir('printenv')
subdir('printf')
subdir('pwd')
subdir('realpath')
subdir('rm')
subdir('rmdir')
subdir('seq')
subdir('sleep')
#subdir('sort')
subdir('split')
subdir('stat')
subdir('stdbuf')
#subdir('stty')
subdir('sync')
#subdir('tail')
subdir('tee')
subdir('test')
#subdir('timeout')
subdir('touch')
subdir('tr')
subdir('true')
subdir('truncate')
subdir('tsort')
subdir('tty')
subdir('uname')
subdir('unexpand')
subdir('uniq')
subdir('users')
subdir('wc')
subdir('which')
#subdir('who')
subdir('xargs')
subdir('xinstall')
subdir('yes')
